--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Bootstrap Simple Login Form</title>
+<title>Login</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -34,22 +34,44 @@
 }
 </style>
 </head>
+ <script src="assets/js/login.js"></script> 
+
+    <script>
+     // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyB6IY0O5FDD2_tmDxhbFGiWNvujO_HvD_w",
+    authDomain: "bd-refugee-information-system.firebaseapp.com",
+    databaseURL: "https://bd-refugee-information-system-default-rtdb.firebaseio.com",
+    projectId: "bd-refugee-information-system",
+    storageBucket: "bd-refugee-information-system.appspot.com",
+    messagingSenderId: "700305332490",
+    appId: "1:700305332490:web:90f775b7e15bb1e07b42f3"
+  };
+
+  // Initialize Firebase
+  firebase. initializeApp(firebaseConfig);
+    </script>
+    <!-- firebase code ends--> 
 <body>
 <div class="login-form">
     <form action="/examples/actions/confirmation.php" method="post">
-        <h2 class="text-center">Log in</h2>       
+        <h2 class="text-center" onclick="login()">Log in</h2>       
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="Username" required="required">
+            <input type="text" class="form-control" placeholder="User ID" required="required">
         </div>
         <div class="form-group">
             <input type="password" class="form-control" placeholder="Password" required="required">
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-block">Log in</button>
+            <button type="submit" class="btn btn-primary btn-block" onclick="login()">Log in</button>
         </div>
+        <!-- <div class="text-center">
+                <button type="submit" onclick="show()">Send Message</button>
+              
+              </div> -->
         <div class="clearfix">
             <label class="float-left form-check-label"><input type="checkbox"> Remember me</label>
-            <a href="#" class="float-right">Forgot Password?</a>
+            <!-- <a href="#" class="float-right">Forgot Password?</a> -->
         </div>        
     </form>
     <p class="text-center"><a href="registration_page.html">Create an Account</a></p>
