--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <!-- <li><a class="nav-link scrollto" href="#about">About</a></li> -->
-          <li><a class="nav-link scrollto" href="login.html">Refugee Information</a></li>
+          <li><a class="nav-link scrollto" href="refugee_info_login.html">Refugee Information</a></li>
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
               <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
