--- a/index.html
+++ b/index.html
@@ -61,16 +61,12 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <!-- <h1 class="logo"><a href="index.html">BizLand<span>.</span></a></h1> -->
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>-->
 <img src="assets/img/logo_r.png" style="height: 90px;" class="img-fluid" alt="Responsive image">
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <!-- <li><a class="nav-link scrollto" href="#about">About</a></li> -->
-          <li><a class="nav-link scrollto" href="refugee_info_login.html">Refugee Information</a></li>
-          <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
+       
+          <li><a class="nav-link scrollto" href="refugee_info.html">Refugee Information</a></li>
               <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="education.html">Education </a></li>
