--- a/registration_page.html
+++ b/registration_page.html
@@ -75,7 +75,7 @@
           </li>
           <li><a class="nav-link scrollto" href="registration_page.html">Register</a></li>
       
-          <li><a class="nav-link scrollto" href="login.html">Login</a></li>
+          <li><a class="nav-link scrollto" href="login_new.html">Login</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -94,7 +94,7 @@
        <div class="col-20 col-lg-10 col-xl-20">
 <br>
 <br>
-            <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Account Registration</h3>
+            <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Refugee Account Registration</h3>
             <!-- <div class="row">
                 <div class="col-12">
  <label class="form-label select-label" id="country">Select country</label> -->
