--- a/education.html
+++ b/education.html
@@ -52,11 +52,11 @@
 <img src="assets/img/logo_r.png" style="height: 90px;" class="img-fluid" alt="Responsive image">
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Home</a></li>
           <!-- <li><a class="nav-link scrollto" href="#about">About</a></li> -->
           <li><a class="nav-link scrollto" href="#services">Refugee Information</a></li>
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
-              <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
+              <li class="dropdown"><a href="#" class="active"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="education.html">Education</a></li>
               <li><a href="medical_health.html">Medical & Health</a></li>
