--- a/registration_page.html
+++ b/registration_page.html
@@ -61,7 +61,7 @@
 <img src="assets/img/logo_r.png" style="height: 90px;" class="img-fluid" alt="Responsive image">
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto " href="index.html">Home</a></li>
           <!-- <li><a class="nav-link scrollto" href="#about">About</a></li> -->
           <li><a class="nav-link scrollto" href="refugee_info.html">Refugee Information</a></li>
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
@@ -73,7 +73,7 @@
               <!-- <li><a href="#">Drop Down 4</a></li> -->
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="registration_page.html">Register</a></li>
+          <li><a class="nav-link scrollto active" href="registration_page.html">Register</a></li>
       
           <li><a class="nav-link scrollto" href="login_new.html">Login</a></li>
         </ul>
