--- a/education_branch.html
+++ b/education_branch.html
@@ -56,7 +56,7 @@
           <!-- <li><a class="nav-link scrollto" href="#about">About</a></li> -->
           <li><a class="nav-link scrollto" href="refugee_info.html">Refugee Information</a></li>
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
-              <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
+              <li class="dropdown"><a href="#" class="active"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="education.html">Education</a></li>
               <li><a href="medical_health.html">Medical & Health</a></li>
