--- a/registration_page.html
+++ b/registration_page.html
@@ -67,10 +67,10 @@
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
               <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Education</a></li>
-              <li><a href="#">Medical & Health</a></li>
-              <li><a href="#">Acommodation</a></li>
-              <!-- <li><a href="#">Drop Down 4</a></li> -->
+              <li><a href="education.html">Education</a></li>
+              <li><a href="medical_health.html">Medical & Health</a></li>
+              <li><a href="acommodation.html">Acommodation</a></li>
+             
             </ul>
           </li>
           <li><a class="nav-link scrollto active" href="registration_page.html">Register</a></li>
