--- a/education.html
+++ b/education.html
@@ -54,7 +54,7 @@
         <ul>
           <li><a class="nav-link scrollto" href="index.html">Home</a></li>
           <!-- <li><a class="nav-link scrollto" href="#about">About</a></li> -->
-          <li><a class="nav-link scrollto" href="#services">Refugee Information</a></li>
+          <li><a class="nav-link scrollto" href="refugee_info.html">Refugee Information</a></li>
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
               <li class="dropdown"><a href="#" class="active"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
