last update ver 3

--- a/medical_health.html
+++ b/medical_health.html
@@ -47,11 +47,11 @@
 <img src="assets/img/logo_r.png" style="height: 90px;" class="img-fluid" alt="Responsive image">
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto " href="index.html">Home</a></li>
           <!-- <li><a class="nav-link scrollto" href="#about">About</a></li> -->
-          <li><a class="nav-link scrollto" href="#services">Refugee Information</a></li>
+          <li><a class="nav-link scrollto" href="refugee_info.html">Refugee Information</a></li>
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
-              <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
+              <li class="dropdown"><a href="#" class="active"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="education.html">Education</a></li>
               <li><a href="medical_health.html">Medical & Health</a></li>
@@ -61,7 +61,7 @@
           </li>
           <li><a class="nav-link scrollto" href="registration_page.html">Register</a></li>
       
-          <li><a class="nav-link scrollto" href="login.html">Login</a></li>
+          <li><a class="nav-link scrollto" href="login_new.html">Login</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -97,7 +97,7 @@
             <div class="box">
               <h3 ><a href=" ">See your health information</h3> </a>
               <div class="btn-wrap">
-                <a href="login.html" class="btn-buy">Login</a>
+                <a href="" class="btn-buy">Login</a>
               </div>
             </div>
           </div>
@@ -107,7 +107,7 @@
               <h3><a href=" ">Apply for health checkup</h3>
              </a>
               <div class="btn-wrap">
-                <a href="login.html" class="btn-buy">yes</a>
+                <a href="" class="btn-buy">yes</a>
               </div>
               
             </div>
@@ -118,7 +118,7 @@
               <h3><a href=" ">Consult with a doctor now?</h3>
             </a>
               <div class="btn-wrap">
-                <a href="login.html" class="btn-buy">yes</a>
+                <a href="" class="btn-buy">yes</a>
               </div>
             </div>
           </div>
@@ -129,7 +129,7 @@
               <h3>Find nearest medical camp</h3>
           </a>
               <div class="btn-wrap">
-                <a href="login.html" class="btn-buy">Find</a>
+                <a href="" class="btn-buy">Find</a>
               </div>
             </div>
           </div>
